--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <!-- TEXT -->
         <div class="link-button">
           <a
-            class="link site"
+            class="link site-link"
             href="https://bettyman.com/registration?type=phone&apkpop=0&partner=p27p94pe70e"
             >Bettyman.com</a
           >
           <a
-            class="link whatsapp"
+            class="link whatsapp-link"
             href="https://api.whatsapp.com/send/?phone=+919078716777&text=I%20want%20to%20register,%20please%20send%20an%20account&type=phone_number&app_absent=0&apkpop=0&partner=p27p94pe70e"
           >
             WhatsApp
@@ -36,25 +36,10 @@
               class="whatsapp-logo"
               src="./images/whatsapp-icon.svg"
               alt="WhatsApp logo"
+              width="43.57"
+              height="auto"
             />
           </a>
-        </div>
-
-        <div class="main-text">
-          <p class="first-paragraph">One click bet <br />matching</p>
-          <div class="second-paragraph">
-            <p class="text-gradient odds">
-              Best odds <br />
-              guaranteed!
-            </p>
-          </div>
-
-          <a
-            href="https://bettyman.com/registration?type=phone&apkpop=0&partner=p27p94pe70e"
-            class="hero-button btn-gradient"
-          >
-            Play now</a
-          >
         </div>
 
         <div class="rights">
