--- a/index.html
+++ b/index.html
@@ -42,6 +42,223 @@
           </a>
         </div>
 
+        <div class="slot-window">
+          <div class="slots-wrap">
+            <div class="column" id="column1">
+              <div class="spinner" id="spinner1">
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/card.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/hat.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/hat.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+
+                <div class="slot-item" id="seven">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/dollar.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/grapes.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/star.png"
+                    alt="card icon"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="column" id="column2">
+              <div class="spinner" id="spinner2">
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/dollar.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/grapes.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/star.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/card.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/hat.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item" id="seven">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/cross.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/chips.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="column" id="column3">
+              <div class="spinner" id="spinner3">
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/cross.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item seven">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/chips.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/dollar.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/grapes.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/star.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/card.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item" id="seven">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <a class="spin-btn btn-gradient" id="spinButton">spin</a>
+        </div>
+
+        <!-- modal wondow -->
+        <div class="modal" id="winModal">
+          <h2>Congratulations!</h2>
+          <p>You got 7️⃣ 7️⃣ 7️⃣!</p>
+          <button id="closeModal">Close</button>
+        </div>
+
         <div class="rights">
           <p class="rights_text">
             bettyman.com is operated by NestlingCorn Limited with the registered
@@ -73,5 +290,6 @@
         />
       </section>
     </main>
+    <script src="./js/spiner.js"></script>
   </body>
 </html>
