added modal style

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </a>
         </div>
 
-        <div class="slot-window">
+        <div class="slot-window" id="slotWindow">
           <div class="slots-wrap">
             <div class="column" id="column1">
               <div class="spinner" id="spinner1">
@@ -254,11 +254,14 @@
 
         <!-- modal wondow -->
         <div class="modal" id="winModal">
-          <h2>Congratulations!</h2>
-          <p>You got 7️⃣ 7️⃣ 7️⃣!</p>
-          <button id="closeModal">Close</button>
+          <h2 class="modal-head">You win!</h2>
+          <p class="modal-text">Take your</p>
+          <p class="modal-text modal-text__bonus text-gradient">100% bonus</p>
+          <p class="modal-text">right now</p>
+          <a class="modal-button btn-gradient">get the bonus</a>
         </div>
 
+        <!--         rights -->
         <div class="rights">
           <p class="rights_text">
             bettyman.com is operated by NestlingCorn Limited with the registered
