2 steps for responsive

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="slots-wrap">
             <div class="column" id="column1">
               <div class="spinner" id="spinner1">
-                <div class="slot-item">
+                <div class="slot-item" id="slotItem">
                   <img
                     class="slot-icon"
                     src="./images/slot-icons/card.png"
