--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <main>
       <section class="hero">
         <!-- TEXT -->
+        <div class="logo">
+          <img class="logo-icon" src="./images/logo.svg" alt="" />
+        </div>
         <div class="link-button">
           <a
             class="link site-link"
