spinner more speed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,71 @@
                   />
                 </div>
 
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/dollar.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/grapes.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/star.png"
+                    alt="card icon"
+                  />
+                </div>
+
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/hat.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/hat.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/card.png"
+                    alt="card icon"
+                  />
+                </div>
                 <div class="slot-item" id="seven">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
                   <img
                     class="slot-icon"
                     src="./images/slot-icons/seven.png"
@@ -118,6 +182,69 @@
 
             <div class="column" id="column2">
               <div class="spinner" id="spinner2">
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/dollar.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/grapes.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/star.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/card.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/hat.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/cross.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/chips.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
                 <div class="slot-item">
                   <img
                     class="slot-icon"
@@ -193,7 +320,70 @@
                     alt="card icon"
                   />
                 </div>
-                <div class="slot-item seven">
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/chips.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/dollar.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/grapes.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/star.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/card.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/cross.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
                   <img
                     class="slot-icon"
                     src="./images/slot-icons/chips.png"
@@ -246,6 +436,76 @@
                   <img
                     class="slot-icon"
                     src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/cross.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/chips.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/dollar.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/grapes.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/star.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/card.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/seven.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/plum.png"
+                    alt="card icon"
+                  />
+                </div>
+                <div class="slot-item">
+                  <img
+                    class="slot-icon"
+                    src="./images/slot-icons/cross.png"
                     alt="card icon"
                   />
                 </div>
